# muffinscript

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml  homebrew.yml
muffinscript/: __init__.py  ast.py  constants.py  error.py  errors.py  interpreter.py  lexer.py  muffin.py  parser.py
muffinscript/ast/: __init__.py  base.py  standard_lib.py  types.py
test/unit/: test_ast.py  test_error.py  test_interpreter.py  test_lexer.py  test_muffin.py  test_parser.py
test/unit/ast/: test_ast.py  test_base.py  test_standard_lib.py  test_types.py
